# LearningSDL

./: CMakeLists.txt  README.md  fix_includes.py  vcpkg.json
Detritus/: Collider.hpp  Globals.hpp  Grid.hpp  Renderer.hpp  Timer.hpp
Detritus/src/: Engine.cpp  Renderer.cpp  Timer.cpp  main.cpp
Engine/AI/: FlowField.cpp  FlowField.hpp
Engine/Core/: Engine.cpp  Engine.hpp  SDLInput.cpp  SDLInput.hpp
Engine/Entities/: Player.cpp  Player.hpp  Weapon.cpp  Weapon.hpp  Zombie.cpp  Zombie.hpp
Engine/Graphics/: Camera3D.cpp  Camera3D.hpp  Chunk.cpp  Chunk.hpp  GLRenderer.cpp  GLRenderer.hpp  SDLWindow.cpp  SDLWindow.hpp  Shader.cpp  Shader.hpp  VoxelMap.cpp  VoxelMap.hpp
Engine/Interfaces/: IEngine.hpp  IEntity.hpp  IGameState.hpp  IInput.hpp  IMap.hpp  IPathfinder.hpp  IRaycaster.hpp  IRenderer.hpp  IWindow.hpp
Engine/Physics/: Raycaster.cpp  Raycaster.hpp
Old/Engine_Old/AI/: FlowField.cpp  FlowField.hpp
Old/Engine_Old/Audio/: SoundManager.cpp  SoundManager.hpp
Old/Engine_Old/Core/: Engine.cpp  Engine.hpp  InputManager.cpp  InputManager.hpp  Time.cpp  Time.hpp  Window.cpp  Window.hpp
Old/Engine_Old/Entities/: Barrier.cpp  Barrier.hpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  MysteryBox.cpp  MysteryBox.hpp  PerkMachine.cpp  PerkMachine.hpp  Player.cpp  Player.hpp  Weapon.cpp  Weapon.hpp  Zombie.cpp  Zombie.hpp
Old/Engine_Old/Game/: IGame.hpp  RoundManager.cpp  RoundManager.hpp  VoxelMap.cpp  VoxelMap.hpp
Old/Engine_Old/Graphics/: Camera3D.cpp  Camera3D.hpp  Chunk.cpp  Chunk.hpp  Frustum.cpp  Frustum.hpp  Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  TextureManager.cpp  TextureManager.hpp
Old/Engine_Old/Physics/: AABB.hpp  Raycaster.cpp  Raycaster.hpp
Old/Project/: DVDLogo.hpp  Globals.hpp  LTexture.hpp  main.cpp
Old/Snake/: Random.hpp  Snake.cpp  Snake.hpp  SnakeEngine.cpp  SnakeEngine.hpp
Old/Worms2D/: main.cpp
Old/Worms2D/Entities/: Projectile.cpp  Projectile.hpp  Worm.cpp  Worm.hpp
Old/Worms2D/Game/: Terrain.cpp  Terrain.hpp  TurnManager.cpp  TurnManager.hpp  WormsGame.cpp  WormsGame.hpp
Old/Zombies_Old/: main.cpp
Project/: DVDLogo.cpp  LTexture.cpp
Snake/: Globals.hpp  Grid.cpp  Grid.hpp  Random.hpp  Snake.cpp  SnakeEngine.cpp  SnakeEngine.hpp  SnakeSegment.hpp  main.cpp
Transit/: CMakeLists.txt
Transit/include/: Engine.h  Globals.h  Player.h  Point.h  Renderer.h  Timer.h
Transit/src/: Engine.cpp  Renderer.cpp  Timer.cpp  main.cpp
Zombies/: main.cpp
Zombies/GameStates/: TestingState.cpp  TestingState.hpp
Zombies/assets/shaders/: basic_fragment.glsl  basic_vertex.glsl
